changelog
2.2.2
	- Using URL provided by the API
	- New icon for the panel
2.2.3
    - Don't show a notification when the focussed tab is the streampage
    - Update panel even if the focussed tab is the channelpage
2.2.4
    - refresh button in panel
    - 0 means no automatic refresh
2.2.5
    - Widget tooltip change depending on the number of livestreams.
    - fixed not iterable tabs
2.2.6
    - Fixed refresh button not working
    - Links not underlined in panel
    - Fixed button tooltip
    - No scrollbar in panel for long streamnames