@@ -67,9 +67,11 @@ exports.main = function() {
     });
     
     // panel init
+    var panelWidth = 212;
     livePanel = require("panel").Panel({
-      width: 212,
-      contentURL: self.data.url("live-panel.html")
+      width: panelWidth+12,
+      contentURL: self.data.url("live-panel.html"),
+      contentScriptOptions: {'minWidth':panelWidth}
     });
     panelButton = require("widget").Widget({
       label: _("live_widget_label"),
